--- a/index.html
+++ b/index.html
@@ -1,11 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Word Dictionary </title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Word Dictionary</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <!-- <div class="input-container">
+        <h1 class="Dicti-he">World Dictionary</h1>
+        <form action="">
+          <div class="flexInput">
+            <input type="text" placeholder="search anything.." />
+            <button
+              type="submit"
+              id="searchBtn"
+              data-toggle="modal"
+              data-target="#exampleModal"
+            >
+              Search here
+            </button>
+          </div>
+        </form>
+      </div> -->
+
+      <!-- // card // -->
+      <div
+        class="card"
+        style="
+          width: 30rem;
+          height: 15rem;
+          background-image: radial-gradient(
+            circle 325px at 19.2% 64.8%,
+            rgba(254, 62, 101, 1) 9.7%,
+            rgba(166, 24, 146, 1) 91.3%
+          );
+        display: flex;justify-content: center;align-items: center ;"
+      >
+        <div class="card-body">
+          <h1 class="card-title Dicti-he">World Dictionary</h1>
+          <form action="">
+            <div class="flexInput" style="margin-top: 3vw;">
+              <input type="text" placeholder="search anything.." />
+              <button
+                type="submit"
+                id="searchBtn"
+                data-toggle="modal"
+                data-target="#exampleModal"
+              >
+                Search here
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="exampleModal"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div
+            class="modal-content"
+            style="
+              background-image: linear-gradient(
+                111.4deg,
+                rgba(7, 7, 9, 1) 6.5%,
+                rgba(27, 24, 113, 1) 93.2%
+              );
+              color: #fff;
+            "
+          >
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel"></h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+
+            <div
+              class="modal-body"
+              id="modalBody"
+              style="border: 1px solid red"
+            ></div>
+            <!-- <hr> -->
+
+            <div class="modal-footer">
+              <button type="button" class="btn btn-danger" data-dismiss="modal">
+                Okay
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--  Modal-->
+    </div>
     <script src="script.js"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+      integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
